# trunk-filter

./: README.md  main.py  pyproject.toml
src/trunk_filter/: __init__.py  composite_filter.py  filter.py  kalman_filter.py  median_filter.py  utils.py
tests/: data.csv  states.csv  test_composite_filter.py  test_kalman_filter.py  test_median_filter.py  test_utils.py
