[project]
name = "trunk-filter"
version = "0.1.0"
description = "A Kalman filter implementation for tracking objects in 3D space."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "filterpy>=1.4.5",
    "numpy>=2.2.5",
    "tqdm>=4.67.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ['src']

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.1",
    "pandas>=2.2.3",
    "pytest>=8.3.5",
]
